@@ -1,6 +1,8 @@
 Release Notes
 
 * current
+  * changed fairshare to work with HS06
+  * removed exception in fairshare so that T1 uses cloud.fairshare if empty
   * added ESMERGERECOVERABLE. Eventually should be taken care of by retrial module
   * added giveGUID to EventPicking
   * changed hint for JEDI_Events
